// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  margin-bottom: 0.75rem;
}

.emotion-10 {
  -webkit-align-items: center!important;
  -webkit-box-align: center!important;
  -ms-flex-align: center!important;
  align-items: center!important;
  display: -webkit-box!important;
  display: -webkit-flex!important;
  display: -ms-flexbox!important;
  display: flex!important;
  line-height: 1!important;
}

.emotion-11 {
  display: block;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-11::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-11::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-11:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-14.emotion-14.emotion-14 {
  margin-bottom: 0px;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-18.emotion-18.emotion-18>*:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-21.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-26 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-26:focus {
  outline: none;
}

.emotion-26[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-26:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-26:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-26:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-26[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-29 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-32 {
  margin-left: 0.5rem!important;
}

.emotion-33.emotion-33 {
  font-weight: 400;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-RadioGroupField"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-FieldWrapperLabelWrapper bb-Box"
    >
      <div
        class="emotion-1 emotion-10 bb-Box"
      >
        <legend
          class="emotion-11 emotion-1 emotion-2 emotion-14 bb-FieldWrapperLabel bb-Box bb-Label"
        >
          Test label
        </legend>
      </div>
    </div>
    <div
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-RadioGroup"
      id="id-test"
      role="radiogroup"
    >
      <div
        class="emotion-18 emotion-1 emotion-2 bb-Box bb-Set"
      >
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            id="id-test"
            name="weather"
            type="radio"
            value="world"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            Hello
          </span>
        </label>
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            id="id-test"
            name="weather"
            type="radio"
            value="me"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            This is
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`composition hook should return with RadioGroupField props 1`] = `
Object {
  "children": <Set
    orientation="vertical"
    spacing="minor-2"
  >
    <Radio
      label="Hello"
      name="weather"
      value="world"
    />
    <Radio
      label="This is"
      name="weather"
      value="me"
    />
  </Set>,
  "className": "css-1fie8gx css-63it0p css-1qnz8fc bb-Box bb-RadioGroup",
  "label": "Test label",
  "role": "radiogroup",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-RadioGroupField"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-8 {
  margin-bottom: 0.75rem;
}

.emotion-10 {
  -webkit-align-items: center!important;
  -webkit-box-align: center!important;
  -ms-flex-align: center!important;
  align-items: center!important;
  display: -webkit-box!important;
  display: -webkit-flex!important;
  display: -ms-flexbox!important;
  display: flex!important;
  line-height: 1!important;
}

.emotion-11 {
  display: block;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-11::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-11::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-11:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-14.emotion-14.emotion-14 {
  margin-bottom: 0px;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-18.emotion-18.emotion-18>*:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-21.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-26 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-26:focus {
  outline: none;
}

.emotion-26[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-26:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-26:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-26:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-26[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-29 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-32 {
  margin-left: 0.5rem!important;
}

.emotion-33.emotion-33 {
  font-weight: 400;
}

<fieldset
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-RadioGroupField"
>
  <div
    class="emotion-0 emotion-1 emotion-5 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-5 emotion-8 bb-FieldWrapperLabelWrapper bb-Box"
    >
      <div
        class="emotion-1 emotion-10 bb-Box"
      >
        <legend
          class="emotion-11 emotion-1 emotion-5 emotion-14 bb-FieldWrapperLabel bb-Box bb-Label"
        >
          Test label
        </legend>
      </div>
    </div>
    <div
      class="emotion-0 emotion-1 emotion-5 bb-Box bb-RadioGroup"
      id="id-test"
      role="radiogroup"
    >
      <div
        class="emotion-18 emotion-1 emotion-5 bb-Box bb-Set"
      >
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-5 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-5 emotion-26 bb-RadioHiddenInput bb-Box"
            id="id-test"
            name="weather"
            type="radio"
            value="world"
          />
          <div
            class="emotion-1 emotion-5 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            Hello
          </span>
        </label>
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-5 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-5 emotion-26 bb-RadioHiddenInput bb-Box"
            id="id-test"
            name="weather"
            type="radio"
            value="me"
          />
          <div
            class="emotion-1 emotion-5 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            This is
          </span>
        </label>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`overrides RadioGroupField.base should render correctly 1`] = `
.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  margin-bottom: 0.75rem;
}

.emotion-10 {
  -webkit-align-items: center!important;
  -webkit-box-align: center!important;
  -ms-flex-align: center!important;
  align-items: center!important;
  display: -webkit-box!important;
  display: -webkit-flex!important;
  display: -ms-flexbox!important;
  display: flex!important;
  line-height: 1!important;
}

.emotion-11 {
  display: block;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-11::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-11::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-11:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-14.emotion-14.emotion-14 {
  margin-bottom: 0px;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-18.emotion-18.emotion-18>*:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-21.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-26 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-26:focus {
  outline: none;
}

.emotion-26[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-26:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-26:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-26:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-26[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-29 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-32 {
  margin-left: 0.5rem!important;
}

.emotion-33.emotion-33 {
  font-weight: 400;
}

<fieldset
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-RadioGroupField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-FieldWrapperLabelWrapper bb-Box"
    >
      <div
        class="emotion-1 emotion-10 bb-Box"
      >
        <legend
          class="emotion-11 emotion-1 emotion-2 emotion-14 bb-FieldWrapperLabel bb-Box bb-Label"
        >
          Test label
        </legend>
      </div>
    </div>
    <div
      class="emotion-3 emotion-1 emotion-2 bb-Box bb-RadioGroup"
      id="id-test"
      role="radiogroup"
    >
      <div
        class="emotion-18 emotion-1 emotion-2 bb-Box bb-Set"
      >
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            id="id-test"
            name="weather"
            type="radio"
            value="world"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            Hello
          </span>
        </label>
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            id="id-test"
            name="weather"
            type="radio"
            value="me"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            This is
          </span>
        </label>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  margin-bottom: 0.75rem;
}

.emotion-10 {
  -webkit-align-items: center!important;
  -webkit-box-align: center!important;
  -ms-flex-align: center!important;
  align-items: center!important;
  display: -webkit-box!important;
  display: -webkit-flex!important;
  display: -ms-flexbox!important;
  display: flex!important;
  line-height: 1!important;
}

.emotion-11 {
  display: block;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-11::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-11::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-11:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-14.emotion-14.emotion-14 {
  margin-bottom: 0px;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-18.emotion-18.emotion-18>*:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-21.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-26 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-26:focus {
  outline: none;
}

.emotion-26[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-26:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-26:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-26:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-26[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-29 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-32 {
  margin-left: 0.5rem!important;
}

.emotion-33.emotion-33 {
  font-weight: 400;
}

<fieldset
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-RadioGroupField"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-FieldWrapperLabelWrapper bb-Box"
    >
      <div
        class="emotion-1 emotion-10 bb-Box"
      >
        <legend
          class="emotion-11 emotion-1 emotion-2 emotion-14 bb-FieldWrapperLabel bb-Box bb-Label"
        >
          Test label
        </legend>
      </div>
    </div>
    <div
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-RadioGroup"
      id="id-test"
      role="radiogroup"
    >
      <div
        class="emotion-18 emotion-1 emotion-2 bb-Box bb-Set"
      >
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            id="id-test"
            name="weather"
            type="radio"
            value="world"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            Hello
          </span>
        </label>
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            id="id-test"
            name="weather"
            type="radio"
            value="me"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            This is
          </span>
        </label>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`props should render correctly for default value 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  margin-bottom: 0.75rem;
}

.emotion-10 {
  -webkit-align-items: center!important;
  -webkit-box-align: center!important;
  -ms-flex-align: center!important;
  align-items: center!important;
  display: -webkit-box!important;
  display: -webkit-flex!important;
  display: -ms-flexbox!important;
  display: flex!important;
  line-height: 1!important;
}

.emotion-11 {
  display: block;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-11::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-11::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-11:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-14.emotion-14.emotion-14 {
  margin-bottom: 0px;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-18.emotion-18.emotion-18>*:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-21.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-26 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-26:focus {
  outline: none;
}

.emotion-26[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-26:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-26:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-26:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-26[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-29 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-32 {
  margin-left: 0.5rem!important;
}

.emotion-33.emotion-33 {
  font-weight: 400;
}

<fieldset
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-RadioGroupField"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-FieldWrapperLabelWrapper bb-Box"
    >
      <div
        class="emotion-1 emotion-10 bb-Box"
      >
        <legend
          class="emotion-11 emotion-1 emotion-2 emotion-14 bb-FieldWrapperLabel bb-Box bb-Label"
        >
          Test label
        </legend>
      </div>
    </div>
    <div
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-RadioGroup"
      id="id-test"
      role="radiogroup"
    >
      <div
        class="emotion-18 emotion-1 emotion-2 bb-Box bb-Set"
      >
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            id="id-test"
            name="weather"
            type="radio"
            value="world"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            Hello
          </span>
        </label>
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            id="id-test"
            name="weather"
            type="radio"
            value="me"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            This is
          </span>
        </label>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`props should render correctly for disabled field 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  margin-bottom: 0.75rem;
}

.emotion-10 {
  -webkit-align-items: center!important;
  -webkit-box-align: center!important;
  -ms-flex-align: center!important;
  align-items: center!important;
  display: -webkit-box!important;
  display: -webkit-flex!important;
  display: -ms-flexbox!important;
  display: flex!important;
  line-height: 1!important;
}

.emotion-11 {
  display: block;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-11::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-11::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-11:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-14.emotion-14.emotion-14 {
  margin-bottom: 0px;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-18.emotion-18.emotion-18>*:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-21.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-26 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-26:focus {
  outline: none;
}

.emotion-26[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-26:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-26:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-26:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-26[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-29 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-32 {
  margin-left: 0.5rem!important;
}

.emotion-33.emotion-33 {
  font-weight: 400;
}

<fieldset
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-RadioGroupField"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-FieldWrapperLabelWrapper bb-Box"
    >
      <div
        class="emotion-1 emotion-10 bb-Box"
      >
        <legend
          class="emotion-11 emotion-1 emotion-2 emotion-14 bb-FieldWrapperLabel bb-Box bb-Label"
        >
          Test label
        </legend>
      </div>
    </div>
    <div
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-RadioGroup"
      id="id-test"
      role="radiogroup"
    >
      <div
        class="emotion-18 emotion-1 emotion-2 bb-Box bb-Set"
      >
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            disabled=""
            id="id-test"
            name="weather"
            type="radio"
            value="world"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            Hello
          </span>
        </label>
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            id="id-test"
            name="weather"
            type="radio"
            value="me"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            This is
          </span>
        </label>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`props should render correctly for disabled fields 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  margin-bottom: 0.75rem;
}

.emotion-10 {
  -webkit-align-items: center!important;
  -webkit-box-align: center!important;
  -ms-flex-align: center!important;
  align-items: center!important;
  display: -webkit-box!important;
  display: -webkit-flex!important;
  display: -ms-flexbox!important;
  display: flex!important;
  line-height: 1!important;
}

.emotion-11 {
  display: block;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-11::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-11::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-11:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-14.emotion-14.emotion-14 {
  margin-bottom: 0px;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-18.emotion-18.emotion-18>*:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-21.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-26 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-26:focus {
  outline: none;
}

.emotion-26[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-26:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-26:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-26:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-26[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-29 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-32 {
  margin-left: 0.5rem!important;
}

.emotion-33.emotion-33 {
  font-weight: 400;
}

<fieldset
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-RadioGroupField"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-FieldWrapperLabelWrapper bb-Box"
    >
      <div
        class="emotion-1 emotion-10 bb-Box"
      >
        <legend
          class="emotion-11 emotion-1 emotion-2 emotion-14 bb-FieldWrapperLabel bb-Box bb-Label"
        >
          Test label
        </legend>
      </div>
    </div>
    <div
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-RadioGroup"
      id="id-test"
      role="radiogroup"
    >
      <div
        class="emotion-18 emotion-1 emotion-2 bb-Box bb-Set"
      >
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            disabled=""
            id="id-test"
            name="weather"
            type="radio"
            value="world"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            Hello
          </span>
        </label>
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            disabled=""
            id="id-test"
            name="weather"
            type="radio"
            value="me"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            This is
          </span>
        </label>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`props should render correctly for horizontal fields 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  margin-bottom: 0.75rem;
}

.emotion-10 {
  -webkit-align-items: center!important;
  -webkit-box-align: center!important;
  -ms-flex-align: center!important;
  align-items: center!important;
  display: -webkit-box!important;
  display: -webkit-flex!important;
  display: -ms-flexbox!important;
  display: flex!important;
  line-height: 1!important;
}

.emotion-11 {
  display: block;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-11::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-11::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-11:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-14.emotion-14.emotion-14 {
  margin-bottom: 0px;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-18.emotion-18.emotion-18>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-21.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-26 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-26:focus {
  outline: none;
}

.emotion-26[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-26:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-26:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-26:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-26[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-29 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-32 {
  margin-left: 0.5rem!important;
}

.emotion-33.emotion-33 {
  font-weight: 400;
}

<fieldset
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-RadioGroupField"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-FieldWrapperLabelWrapper bb-Box"
    >
      <div
        class="emotion-1 emotion-10 bb-Box"
      >
        <legend
          class="emotion-11 emotion-1 emotion-2 emotion-14 bb-FieldWrapperLabel bb-Box bb-Label"
        >
          Test label
        </legend>
      </div>
    </div>
    <div
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-RadioGroup"
      id="id-test"
      role="radiogroup"
    >
      <div
        class="emotion-18 emotion-1 emotion-2 bb-Box bb-Set"
      >
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            id="id-test"
            name="weather"
            type="radio"
            value="world"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            Hello
          </span>
        </label>
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            id="id-test"
            name="weather"
            type="radio"
            value="me"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            This is
          </span>
        </label>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`props should render correctly for state danger 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  margin-bottom: 0.75rem;
}

.emotion-10 {
  -webkit-align-items: center!important;
  -webkit-box-align: center!important;
  -ms-flex-align: center!important;
  align-items: center!important;
  display: -webkit-box!important;
  display: -webkit-flex!important;
  display: -ms-flexbox!important;
  display: flex!important;
  line-height: 1!important;
}

.emotion-11 {
  display: block;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-11::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-11::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-11:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-14.emotion-14.emotion-14 {
  margin-bottom: 0px;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-18.emotion-18.emotion-18>*:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-21.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-26 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-26:focus {
  outline: none;
}

.emotion-26+.bb-RadioIcon {
  border-color: var(--bb-palette-danger, #000000);
}

.emotion-26:not(:checked)+.bb-RadioIcon {
  box-shadow: var(--bb-palette-dangerTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-26[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-26:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-26:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-26:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-26[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-29 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-32 {
  margin-left: 0.5rem!important;
}

.emotion-33.emotion-33 {
  font-weight: 400;
}

<fieldset
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-RadioGroupField"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-FieldWrapperLabelWrapper bb-Box"
    >
      <div
        class="emotion-1 emotion-10 bb-Box"
      >
        <legend
          class="emotion-11 emotion-1 emotion-2 emotion-14 bb-FieldWrapperLabel bb-Box bb-Label"
        >
          Test label
        </legend>
      </div>
    </div>
    <div
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-RadioGroup"
      id="id-test"
      role="radiogroup"
    >
      <div
        class="emotion-18 emotion-1 emotion-2 bb-Box bb-Set"
      >
        <label
          aria-describedby="id-test"
          aria-invalid="true"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            id="id-test"
            name="weather"
            type="radio"
            value="world"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            Hello
          </span>
        </label>
        <label
          aria-describedby="id-test"
          aria-invalid="true"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            id="id-test"
            name="weather"
            type="radio"
            value="me"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            This is
          </span>
        </label>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`props should render correctly for state success 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  margin-bottom: 0.75rem;
}

.emotion-10 {
  -webkit-align-items: center!important;
  -webkit-box-align: center!important;
  -ms-flex-align: center!important;
  align-items: center!important;
  display: -webkit-box!important;
  display: -webkit-flex!important;
  display: -ms-flexbox!important;
  display: flex!important;
  line-height: 1!important;
}

.emotion-11 {
  display: block;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-11::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-11::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-11:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-14.emotion-14.emotion-14 {
  margin-bottom: 0px;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-18.emotion-18.emotion-18>*:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-21.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-26 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-26:focus {
  outline: none;
}

.emotion-26+.bb-RadioIcon {
  border-color: var(--bb-palette-success, #000000);
}

.emotion-26:not(:checked)+.bb-RadioIcon {
  box-shadow: var(--bb-palette-successTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-26[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-26:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-26:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-26:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-26[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-29 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-32 {
  margin-left: 0.5rem!important;
}

.emotion-33.emotion-33 {
  font-weight: 400;
}

<fieldset
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-RadioGroupField"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-FieldWrapperLabelWrapper bb-Box"
    >
      <div
        class="emotion-1 emotion-10 bb-Box"
      >
        <legend
          class="emotion-11 emotion-1 emotion-2 emotion-14 bb-FieldWrapperLabel bb-Box bb-Label"
        >
          Test label
        </legend>
      </div>
    </div>
    <div
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-RadioGroup"
      id="id-test"
      role="radiogroup"
    >
      <div
        class="emotion-18 emotion-1 emotion-2 bb-Box bb-Set"
      >
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            id="id-test"
            name="weather"
            type="radio"
            value="world"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            Hello
          </span>
        </label>
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            id="id-test"
            name="weather"
            type="radio"
            value="me"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            This is
          </span>
        </label>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`props should render correctly for state warning 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  margin-bottom: 0.75rem;
}

.emotion-10 {
  -webkit-align-items: center!important;
  -webkit-box-align: center!important;
  -ms-flex-align: center!important;
  align-items: center!important;
  display: -webkit-box!important;
  display: -webkit-flex!important;
  display: -ms-flexbox!important;
  display: flex!important;
  line-height: 1!important;
}

.emotion-11 {
  display: block;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-11::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-11::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-11:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-14.emotion-14.emotion-14 {
  margin-bottom: 0px;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-18.emotion-18.emotion-18>*:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-21.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-26 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-26:focus {
  outline: none;
}

.emotion-26+.bb-RadioIcon {
  border-color: var(--bb-palette-warning, #000000);
}

.emotion-26:not(:checked)+.bb-RadioIcon {
  box-shadow: var(--bb-palette-warningTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-26[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-26:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-26:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-26:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-26[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-29 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-32 {
  margin-left: 0.5rem!important;
}

.emotion-33.emotion-33 {
  font-weight: 400;
}

<fieldset
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-RadioGroupField"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-FieldWrapperLabelWrapper bb-Box"
    >
      <div
        class="emotion-1 emotion-10 bb-Box"
      >
        <legend
          class="emotion-11 emotion-1 emotion-2 emotion-14 bb-FieldWrapperLabel bb-Box bb-Label"
        >
          Test label
        </legend>
      </div>
    </div>
    <div
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-RadioGroup"
      id="id-test"
      role="radiogroup"
    >
      <div
        class="emotion-18 emotion-1 emotion-2 bb-Box bb-Set"
      >
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            id="id-test"
            name="weather"
            type="radio"
            value="world"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            Hello
          </span>
        </label>
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            id="id-test"
            name="weather"
            type="radio"
            value="me"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            This is
          </span>
        </label>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  margin-bottom: 0.75rem;
}

.emotion-10 {
  -webkit-align-items: center!important;
  -webkit-box-align: center!important;
  -ms-flex-align: center!important;
  align-items: center!important;
  display: -webkit-box!important;
  display: -webkit-flex!important;
  display: -ms-flexbox!important;
  display: flex!important;
  line-height: 1!important;
}

.emotion-11 {
  display: block;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-11::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-11::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-11:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-14.emotion-14.emotion-14 {
  margin-bottom: 0px;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-18.emotion-18.emotion-18>*:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-21.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-26 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-26:focus {
  outline: none;
}

.emotion-26[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-26:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-26:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-26:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-26[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-29 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-32 {
  margin-left: 0.5rem!important;
}

.emotion-33.emotion-33 {
  font-weight: 400;
}

<fieldset
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-RadioGroupField"
>
  <div
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-FieldWrapperLabelWrapper bb-Box"
    >
      <div
        class="emotion-1 emotion-10 bb-Box"
      >
        <legend
          class="emotion-11 emotion-1 emotion-2 emotion-14 bb-FieldWrapperLabel bb-Box bb-Label"
        >
          Test label
        </legend>
      </div>
    </div>
    <div
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-RadioGroup"
      id="id-test"
      role="radiogroup"
    >
      <div
        class="emotion-18 emotion-1 emotion-2 bb-Box bb-Set"
      >
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            id="id-test"
            name="weather"
            type="radio"
            value="world"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            Hello
          </span>
        </label>
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            id="id-test"
            name="weather"
            type="radio"
            value="me"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            This is
          </span>
        </label>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`theming RadioGroupField.base should render correctly 1`] = `
.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  margin-bottom: 0.75rem;
}

.emotion-10 {
  -webkit-align-items: center!important;
  -webkit-box-align: center!important;
  -ms-flex-align: center!important;
  align-items: center!important;
  display: -webkit-box!important;
  display: -webkit-flex!important;
  display: -ms-flexbox!important;
  display: flex!important;
  line-height: 1!important;
}

.emotion-11 {
  display: block;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-11::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-11::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-11:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-14.emotion-14.emotion-14 {
  margin-bottom: 0px;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-18.emotion-18.emotion-18>*:not(:last-child) {
  margin-bottom: 0.5rem;
}

.emotion-21.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-26 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-26:focus {
  outline: none;
}

.emotion-26[disabled]+.bb-RadioIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-26:focus+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-26:not([disabled]):checked+.bb-RadioIcon {
  border-color: var(--bb-palette-primary, #000000);
}

.emotion-26:checked+.bb-RadioIcon::before {
  background: var(--bb-palette-primary, #000000);
  border-radius: 50%;
  content: '';
  height: 0.5em;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 0.5em;
}

.emotion-26[disabled]:checked+.bb-RadioIcon::before {
  border-color: var(--bb-palette-gray300, #000000);
  background: var(--bb-palette-gray300, #000000);
}

.emotion-29 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-white900, #000000);
  border-radius: 100%;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-32 {
  margin-left: 0.5rem!important;
}

.emotion-33.emotion-33 {
  font-weight: 400;
}

<fieldset
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-RadioGroupField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-2 emotion-8 bb-FieldWrapperLabelWrapper bb-Box"
    >
      <div
        class="emotion-1 emotion-10 bb-Box"
      >
        <legend
          class="emotion-11 emotion-1 emotion-2 emotion-14 bb-FieldWrapperLabel bb-Box bb-Label"
        >
          Test label
        </legend>
      </div>
    </div>
    <div
      class="emotion-3 emotion-1 emotion-2 bb-Box bb-RadioGroup"
      id="id-test"
      role="radiogroup"
    >
      <div
        class="emotion-18 emotion-1 emotion-2 bb-Box bb-Set"
      >
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            id="id-test"
            name="weather"
            type="radio"
            value="world"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            Hello
          </span>
        </label>
        <label
          aria-describedby="id-test"
          aria-invalid="false"
          class="emotion-21 emotion-1 emotion-2 bb-Box bb-Radio"
        >
          <input
            class="emotion-1 emotion-2 emotion-26 bb-RadioHiddenInput bb-Box"
            id="id-test"
            name="weather"
            type="radio"
            value="me"
          />
          <div
            class="emotion-1 emotion-2 emotion-29 bb-RadioIcon bb-Box"
          />
          <span
            class="emotion-11 emotion-1 emotion-32 emotion-33 bb-RadioLabel bb-Box bb-Label"
            for="id-test"
            id="id-test"
          >
            This is
          </span>
        </label>
      </div>
    </div>
  </div>
</fieldset>
`;
